# Peptide

./: .gitignore  AGENT_CONTEXT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  NOTICE  NOTICE.md  README.md  TESTING.md  batch_spawn_test.sh  build.rs  commands.hsx  freeze_test2.sh  handoff.md  justfile  make-app.sh  make-win.sh  match_settings.conf  pool_test.sh  prelude.hsx  rebuild-sandbag.sh  run.sh  runseq.sh  sc_test.sh
.cargo/: config.toml
.claude/: launch.json  settings.json
.github/workflows/: release-linux.yml  rust.yml
SSF2ConverterApp/.build/: build.db
SSF2ConverterApp/.build/arm64-apple-macosx/release/: SSF2ConverterApp
SSF2ConverterApp/.build/arm64-apple-macosx/release/Modules/: SSF2ConverterApp.swiftmodule  SSF2ConverterApp.swiftsourceinfo
SSF2ConverterApp/.build/arm64-apple-macosx/release/SSF2ConverterApp.build/: master.swiftdeps
SSF2ConverterApp/.build/arm64-apple-macosx/release/SSF2ConverterApp.dSYM/Contents/Resources/DWARF/: SSF2ConverterApp
SSF2ConverterApp/Sources/SSF2ConverterApp/: App.swift  ContentView.swift
characters/sandbag/: conversion_stats.json  sandbag.fraytools
crates/ssf2-converter/: Cargo.toml
crates/ssf2-converter/mappings/: character_helpers.toml  commands.jsonc  global_helpers.toml  item_helpers.toml  projectile_helpers.toml  projectile_tables.jsonc  stage_helpers.toml
crates/ssf2-converter/mappings/character/: animation_template.jsonc  animations.jsonc  hitbox_stats.jsonc  stats.jsonc  stats_tables.jsonc
crates/ssf2-converter/mappings/stage/: metadata.jsonc
crates/ssf2-converter/src/: abc_codec.rs  abc_inject.rs  abc_parser.rs  anim_splitter.rs  api_mappings.rs  classify.rs  convert.rs  decompiler.rs  engine_probe.rs  entity_gen.rs  extractor.rs  fraytools_project.rs  fraytools_transform.rs  haxe_gen.rs  image_extractor.rs  lib.rs  mappings.rs  palette_gen.rs  physics_sim.rs  project.rs  projectile_gen.rs  sound_extractor.rs  sprite_parser.rs  ssf.rs  stage_abc.rs  stage_emit.rs  stage_parser.rs  swf_parser.rs  uuid_gen.rs  vector_raster.rs
crates/ssf2-converter/tests/: classify_stage.rs  constructor_walk_detection.rs  conventions.rs  doc_freshness.rs  golden_sandbag.rs  guid_uniqueness.rs  inprocess_reuse.rs  itembox_placement.rs  mappings_config.rs  mario_physics_parity.rs  multi_character_project.rs  projectile_effect.rs  sheik_extraction.rs  sprite_geometry.rs  ssf_swf.rs  stage_porting.rs  transformation_extraction.rs  translate_pipeline.rs
crates/ssf2-converter/tests/common/: mod.rs
crates/ssf2-converter/tests/golden/: sandbag_hashes.txt
docs/: ENGINE_BLOCKER.md  ENGINE_RE_MAP_qoracle.md  ENGINE_RE_MAP_v2.md  FREEZE_FIX_DONE.md  FREEZE_FIX_SPEC.md  FREEZE_ROOT_CAUSE.md  HARNESS_AUDIT.md  HARNESS_MT_VERIFIED.md  HARNESS_WORKFLOW.md  INJECTION_RECIPE.md  INTEGRITY_HALT.md  IN_ENGINE_VALIDATION.md  ITEMBOX_DRIFT.md  MODDER_GUIDE.md  P1_P2_STATUS.md  PARITY.md  PEPTIDE_ARCHITECTURE.md  PEPTIDE_DESIGN.md  PEPTIDE_FUTURE.md  PEPTIDE_GUIDE.md  PEPTIDE_HSCRIPT.md  PEPTIDE_README.md  PORTING_CHARACTERS.md  PORTING_STAGES.md  PROGRESS.md  SANDBAG_FREEZE_INVESTIGATION.md  SESSION3_PROGRESS.md  SESSION_FINAL_HANDOFF.md  STATUS.md  STATUS_SUMMARY.md  UGC_BYTECODE_ATTEMPTS.md  autonomous-sandbag-plan.md  character_status.md  cleanup_report.md  codebase_analysis.md  constructor_walk_detection.md  fraytools_internals.md  fraytools_reverse_engineering_feasibility.md  multi_character_projects_plan.md  overnight_session_log.md  (+4 more)
hl_spike/: README.md
mappings/: commands.json  commands.jsonc
mappings/character/: animation_template.jsonc  animations.json  animations.jsonc  hitbox_stats.json  hitbox_stats.jsonc  stats.json  stats.jsonc
recipes/: mario_moveset.recipe
src/: abc_parser.rs  anim_splitter.rs  api_mappings.rs  asm.rs  bridge.rs  commands.rs  config.rs  convert.rs  debug_target.rs  decompiler.rs  entity_gen.rs  extractor.rs  fastboot.rs  fraytools.rs  gui.rs  haxe_gen.rs  image_extractor.rs  interpreter.rs  lib.rs  main.rs  manifest.rs  mappings.rs  overlay.rs  palette_gen.rs  peptide_overlay.html  peptide_ui.html  platform.rs  session.rs  sound_extractor.rs  sprite_parser.rs  ssf.rs  ssf2.rs  ssf2_bridge.rs  ssf2_target.rs  ui.rs  vector_raster.rs  vocab.rs
ssf2-converter-gui/: Cargo.toml  README.md
ssf2-converter-gui/src/: main.rs  platform.rs  prefs.rs
stages/battlefieldssf2/: battlefieldssf2.fraytools
stages/bowserscastlessf2/: bowserscastlessf2.fraytools
stages/junglehijinxssf2/: junglehijinxssf2.fraytools
tests/: constructor_walk_detection.rs  doc_freshness.rs  golden_sandbag.rs  guid_uniqueness.rs  itembox_placement.rs  mappings_config.rs  multi_character_project.rs  path1_path2_equivalence.rs  sheik_extraction.rs  sprite_geometry.rs  ssf_swf.rs  transformation_extraction.rs  translate_pipeline.rs
tests/golden/: sandbag_hashes.txt
tools/: ab_compare.sh  batch_spawn_test.sh  freeze_probe.sh  freeze_test.sh  freeze_test2.sh  make-app.sh  make-linux.sh  make-win.sh  make_buggy_fra.py  parity_check.py  patch_fra_loops.py  pool_test.sh  rebuild-sandbag.sh  recipe.sh  release.sh  run.sh  runseq.sh  sc_test.sh  translation_completeness.sh
tools/fraymakers-harness/: Cargo.toml  README.md  freeze_probe.sh  freeze_test.sh  freeze_test2.sh  pool_test.sh  run.sh  runseq.sh  sc_test.sh
tools/fraymakers-harness/src/: main.rs
tools/fraymakers-harness/steamshim/: steamshim.c
tools/fraytools-harness/: README.md  export-in-fraytools.js  harness.js  package.json  render-entity.js
tools/hooks/: docs-guard.sh  post-build-makeapp.sh
tools/peptide/: .gitignore  Cargo.toml  README.md  ab_compare.sh  batch_spawn_test.sh  freeze_probe.sh  freeze_test.sh  freeze_test2.sh  match_settings.conf  pool_test.sh  prelude.hsx  run-ui.sh  run.sh  runseq.sh  sc_test.sh
tools/peptide/hl_spike/: Spike.hx
tools/peptide/src/: asm.rs  bridge.rs  commands.rs  gui.rs  main.rs  manifest.rs  peptide_ui.html  ui.rs
tools/peptide/steamshim/: README.md
tools/tests/: ab_compare.sh  batch_spawn_test.sh  parity_check.py  translation_completeness.sh
tools/tests/recipes/: sandbag.golden
(+1 files in other folders)
