[package]
name = "ssf2_converter"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssf2_converter"
path = "src/lib.rs"

[dependencies]
swf = "0.2"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fasteval = "0.2"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
bytes = "1.0"
byteorder = "1.5"
encoding_rs = "0.8"
image = "0.25.10"
sha1 = "0.10"
stdio-override = { version = "0.1", optional = true }
indicatif = "0.17"
colored = "2.1"
regex = "1"
