[workspace]
members = ["crates/ssf2-converter"]
resolver = "2"

[package]
name = "peptide"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "peptide"
path = "src/main.rs"

[dependencies]
# ── Engine harness (bytecode patcher + webview UI + CDP FrayTools driver) ──
hlbc = "=0.7.0"
anyhow = "1.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
wry = "0.55.1"
tao = "0.35.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.21"
# ── Config persistence + native file dialogs (ported from the old egui GUI) ──
dirs = "5"
rfd = "0.15"
# ── In-process SSF2 → Fraymakers conversion (folded in; no more sidecar bin) ──
ssf2_converter = { path = "crates/ssf2-converter" }
log = "0.4"
env_logger = "0.11"
