[package]
name = "ssf2-converter-gui"
version = "0.1.0"
edition = "2021"
description = "Cross-platform GUI for the SSF2 → Fraymakers converter (egui/eframe)."

[[bin]]
name = "ssf2-converter-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.15"                 # native file/folder dialogs (Win/Mac/Linux)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"                   # cross-platform home/config/appdata dirs
